--- a/package.json
+++ b/package.json
@@ -6,43 +6,43 @@
   "author": "Cezar Neaga <hi@cezarneaga.eu>",
   "dependencies": {
     "@glidejs/glide": "^3.4.1",
-    "gatsby": "^2.7.5",
-    "gatsby-cli": "^2.7.47",
-    "gatsby-image": "^2.1.2",
+    "gatsby": "^2.22.9",
+    "gatsby-cli": "^2.12.34",
+    "gatsby-image": "^2.4.5",
     "gatsby-plugin-fixhash": "^0.0.4",
-    "gatsby-plugin-manifest": "^2.1.1",
-    "gatsby-plugin-offline": "^3.0.11",
+    "gatsby-plugin-manifest": "^2.4.9",
+    "gatsby-plugin-offline": "^3.2.7",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
-    "gatsby-plugin-react-helmet": "^3.0.12",
-    "gatsby-plugin-sass": "^2.0.11",
-    "gatsby-plugin-sharp": "^2.1.2",
+    "gatsby-plugin-react-helmet": "^3.3.2",
+    "gatsby-plugin-sass": "^2.3.2",
+    "gatsby-plugin-sharp": "^2.6.9",
     "gatsby-plugin-web-font-loader": "^1.0.4",
-    "gatsby-source-filesystem": "^2.0.37",
-    "gatsby-transformer-sharp": "^2.1.20",
-    "node-sass": "^4.12.0",
+    "gatsby-source-filesystem": "^2.3.8",
+    "gatsby-transformer-sharp": "^2.5.3",
+    "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
-    "rc-progress": "^2.5.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-feather": "^2.0.3",
     "react-ga": "^2.7.0",
-    "react-helmet": "^5.2.1",
-    "react-stickynode": "^2.1.1",
-    "react-tabs": "^3.0.0"
+    "rc-progress": "^3.0.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-feather": "^2.0.8",
+    "react-helmet": "^6.0.0",
+    "react-stickynode": "^3.0.2",
+    "react-tabs": "^3.1.1"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "2.x",
-    "@typescript-eslint/parser": "2.x",
-    "babel-eslint": "10.x",
-    "eslint": "6.x",
-    "eslint-config-react-app": "^5.0.2",
-    "eslint-plugin-flowtype": "3.x",
-    "eslint-plugin-import": "2.x",
+    "@typescript-eslint/eslint-plugin": "3.0.0",
+    "@typescript-eslint/parser": "3.0.0",
+    "babel-eslint": "10.1.0",
+    "eslint": "7.1.0",
+    "eslint-config-react-app": "^5.2.1",
+    "eslint-plugin-flowtype": "5.1.0",
+    "eslint-plugin-import": "2.20.2",
     "eslint-plugin-jsx-a11y": "6.x",
-    "eslint-plugin-react": "7.x",
-    "eslint-plugin-react-hooks": "1.x",
-    "prettier": "^1.17.1",
-    "sass": "^1.20.3"
+    "eslint-plugin-react": "7.20.0",
+    "eslint-plugin-react-hooks": "4.0.2",
+    "prettier": "^2.0.5",
+    "sass": "^1.26.5"
   },
   "keywords": [
     "civictech"
